--- a/notes/commit-access-templates/contrib-committer.tmpl
+++ b/notes/commit-access-templates/contrib-committer.tmpl
@@ -44,7 +44,7 @@ username, and the password can be plaintext or crypted.  Send to
 and one of the people behind that role alias will set you up with
 commit access.  Once you receive confirmation, test your commit access
 by adding yourself to the COMMITTERS file - under the 'XXXXXXXXXXX'
-section, describing your commit are as '(XXXXXXX)'.  Then create
+section, describing your commit area as '(XXXXXXX)'.  Then create
 contrib/XXXXX/ and start committing!
 
 Thanks,
