Import release 0.7 of svn2cl. This version includes performance enhancements, a couple of new options, auto-detection of repository working directory (when using svn>=1.3.0) and some general improvements.
[in contrib/client-side/svn2cl]

* svn2cl.sh: The command line options --separate-daylogs and
  --reparagraph were added.  svn info is now used to get the path to
  strip from svn log and support detecting and reading colon separated
  authors files was added.

* svn2html.xsl: Performance improvements were made by only doing
  author/date comparisons if --group-by-day was specified.  The
  revision numbers are now linkable.

* svn2html.css: Small layout improvements were made.

* svn2cl.1: The new options and features were documented.

* svn2cl.xsl: Performance improvements were made by only doing
  author/date comparisons if --group-by-day was specified.  The author
  lookup code was tuned a bit and the new command-line options were
  implemented.

--- a/contrib/client-side/svn2cl/svn2html.css
+++ b/contrib/client-side/svn2cl/svn2html.css
@@ -1,5 +1,6 @@
 body {
   background-color: white;
+  color: black;
   margin-left: 1.5em;
   margin-right: 1.5em;
   margin-top: 1.5em;
@@ -44,6 +45,10 @@ span.changelog_author {
   background: #fff4f4;
 }
 
+.changelog_revision a {
+  color: inherit;
+}
+
 .changelog_files {
   font-size: 80%;
   font-family: monospace;
@@ -65,9 +70,10 @@ p.changelog_footer {
   font-style: italic;
   line-height: 90%;
   color: gray;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 p.changelog_footer a {
   text-decoration: none;
-  color: gray;
+  color: inherit;
 }
