Tweak password instructions.
* notes/commit-access-templates/contrib-committer.tmpl
* notes/commit-access-templates/full-committer.tmpl
* notes/commit-access-templates/partial-committer.tmpl
  Remove mention of plain-text password, and add mention of the web
  password change tool recommend by cmpilato.

--- a/notes/commit-access-templates/contrib-committer.tmpl
+++ b/notes/commit-access-templates/contrib-committer.tmpl
@@ -35,9 +35,11 @@ and we prefer to have multiple active maintainers before doing that.
 In the future, if more people get involved with XXXXX, we can look at
 moving it into tools/.
 
-If all this is okay with you, please send us a username and password;
-the username should be the same as your subversion.tigris.org
-username, and the password can be plaintext or crypted.  Send to
+If all this is okay with you, please send us a username and a
+htpasswd-crypted password; the username should be the same as your
+subversion.tigris.org username, and you can alternately set your
+password online <https://svn.collab.net/wpct/> after you account has
+been created.  Send to
 
    svnadmin{AT}svn.collab.net
 
