--- a/notes/commit-access-templates/full-committer.tmpl
+++ b/notes/commit-access-templates/full-committer.tmpl
@@ -14,10 +14,12 @@ Hi New Full Committer,
 
 The other committers and I would like to offer you full commit access
 to Subversion.  To accept this offer, please send your tigris.org
-username and a (plaintext or htpasswd-crypted) password to
-svnadmin{AT}svn.collab.net.  Or if you already had partial commit
-access, just reply to this and we'll update COMMITERS appropriately
-(or you can just update COMMITTERS yourself, that's fine too).
+username and a htpasswd-crypted password to svnadmin{AT}svn.collab.net.
+Alternately, you can set your password yourself
+<https://svn.collab.net/wpct/> once your account has been created.
+Or, if you already have partial commit access, just reply to this
+email and we'll update COMMITERS appropriately (or you can just update
+COMMITTERS yourself, that's fine too).
 
 Remember that you can still post patches for review before committing,
 when you want to.  Commit access just means that you can rely on your
