--- a/notes/commit-access-templates/partial-committer.tmpl
+++ b/notes/commit-access-templates/partial-committer.tmpl
@@ -14,10 +14,11 @@ Hi New Partial Committer,
 
 The other committers and I would like to offer you partial commit
 access for maintenance of the Subversion FROBLINGS area.  To accept
-this offer, please send your tigris.org username and a (plaintext or
-htpasswd-crypted) password to svnadmin{AT}svn.collab.net.  Or if you
-already have commit access to another area, you can just update
-COMMITERS appropriately.
+this offer, please send your tigris.org username and a
+htpasswd-crypted password to svnadmin{AT}svn.collab.net.  Alternately,
+you can set your password yourself <https://svn.collab.net/wpct/> once
+your account has been created.  Or, if you already have commit access
+to another area, you can just update COMMITERS appropriately.
 
 Remember that you can still post patches for review before committing,
 when you want to.  Commit access just means that you can rely on your
