* notes/commit-access-templates/partial-committer.tmpl * notes/commit-access-templates/contrib-committer.tmpl * notes/commit-access-templates/full-committer.tmpl   Consistify the instructions for getting commit privs configured on   svn.collab.net, calling out that the username and (optional)   password should accompany a forwarded copy of the commit privelege   offer email.

--- a/notes/commit-access-templates/contrib-committer.tmpl
+++ b/notes/commit-access-templates/contrib-committer.tmpl
@@ -35,19 +35,17 @@ and we prefer to have multiple active maintainers before doing that.
 In the future, if more people get involved with XXXXX, we can look at
 moving it into tools/.
 
-If all this is okay with you, please send us a username and a
-htpasswd-crypted password; the username should be the same as your
-subversion.tigris.org username, and you can alternately set your
-password online <https://svn.collab.net/wpct/> after you account has
-been created.  Send to
-
-   svnadmin{AT}svn.collab.net
-
-and one of the people behind that role alias will set you up with
-commit access.  Once you receive confirmation, test your commit access
-by adding yourself to the COMMITTERS file - under the 'XXXXXXXXXXX'
-section, describing your commit area as '(XXXXXXX)'.  Then create
-contrib/XXXXX/ and start committing!
+You can accept this offer by forwarding a copy of this mail to
+svnadmin{AT}svn.collab.net, and including in that message your
+tigris.org username and, optionally, an htpasswd-crypted password.
+(If you don't provide a password, a temporary one will be chosen for
+you -- in either case, you can change your password yourself later
+<https://svn.collab.net/wpct/>.)  Once you are notified that your
+account has been activated, you are encouraged to add yourself to the
+COMMITTERS file appropriately (under the 'XXXXXXXXXXX' section,
+describing your commit area as '(XXXXXXX)'), which also serves as a
+test of your new username and password.  Then create contrib/XXXXX/
+and start committing!
 
 Thanks,
 -Your Name Here
